# python-pretty-acid

./: .gitignore  Makefile  README.md  alembic.ini  example.env  main.py  pyproject.toml
app/: providers.py
app/application/interfaces/: common.py  repository.py  transaction.py
app/application/services/: post.py  post_attachment.py  user.py
app/application/transaction/: __init__.py  context.py  interfaces.py  manager.py
app/config/: __init__.py
app/infrastructure/: common.py
app/infrastructure/database/migrations/: env.py
app/infrastructure/database/migrations/versions/: 6b4db3dd6c00_init.py  fefaa39f1202_init.py
app/infrastructure/database/repository/: post.py  post_attachment.py  user.py
app/infrastructure/database/transaction/: __init__.py  context.py  manager.py  session.py
app/models/: __init__.py  base.py  post.py  post_attachment.py  user.py
app/tests/: application.py  basic.py
