[project]
name = "python-pretty-acid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "dishka>=1.7.2",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "sqlalchemy>=2.0.45",
]
